# azure_function_mcp

./: .funcignore  .gitignore  README.md  client.py  function_app.py  host.json  local.settings.json  pyproject.toml  requirements.txt
shared_code/: db_manager.py
